examples/error-codes/unspecified/USP-STDLIB3-bad.output
Error: USP-STDLIB3
Description: Called the atexit function after normal program termination has begun.
Type: Unspecified value or behavior.
See also: C11 sec. 7.22.4.2:2, J.1:1 item 44
  at atexit(USP-STDLIB3-bad.c:4)
  at bar(USP-STDLIB3-bad.c:4)
  at <file-scope>(<unknown>)
