examples/error-codes/unspecified/USP-STDLIB3-bad.c
#include<stdlib.h>
void foo() {}
void bar() {
  atexit(foo);
}

int main() {
  atexit(bar);
}
